platform/portal/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: portal
  namespace: portal
  labels:
    app: portal
spec:
  selector:
    app: portal
  ports:
    - name: http
      port: 80
      targetPort: http
